--- a/predictive.html
+++ b/predictive.html
@@ -121,10 +121,10 @@
 
         <div class="sub" style="text-align: center;"> Now, Actor Selection for particular any Genre</div>
         <div class="actors">
-            <div class='tableauPlaceholder' id='viz1606912170086' style='position: relative;width:50%;height: 631px;'>
+            <div class='tableauPlaceholder' id='viz1606912170086' style='position: relative;width:100px;height: 631px;'>
                 <noscript><a href='#'><img alt=' '
                             src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;pr&#47;predict_16069085618890&#47;Sheet4&#47;1_rss.png'
-                            style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+                            style='border: none' /></a></noscript><object class='tableauViz' style='display:none;width:100%;height: 631px;'>
                     <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
                     <param name='embed_code_version' value='3' />
                     <param name='site_root' value='' />
@@ -198,6 +198,8 @@
                 type='text/javascript'>                    var divElement = document.getElementById('viz1606912856148'); var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
         </div>
     </div>
+    <br>
+    <br>
     <!-- jQuery and JS bundle w/ Popper.js -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
