--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
-    <link href='http://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet' type
+    <link href='http://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet'>
 </head>
 <body>
     <br/>
@@ -29,6 +29,34 @@
         <div class="sub-heading2">      
                OTT stands for 'Over The Top' and refers to any streaming service that delivers content over the internet.      
         </div>
+        <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" style="margin-left: 31%;font-weight: 400;font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;font-size: 15px;letter-spacing: 1rem;"  data-toggle="modal" data-target="#exampleModalCenter">
+  Problem Statement
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;font-size: 15px;">Problem Statement</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
+        <p>A newly launched OTT platform wishes to list certain movies to increase traffic on their platform.</p>
+        <p>To analyze the various aspects and trends of Indian movies, Their data analytics team has gathered database of Movies from 1950 to 2019 having various attributes and various underlying influencing factors.</p> 
+ 
+        <p>The platform also desires to produce audience-centric  series/movies on the current trends of actors , genres , plot and IMDB rating and redefine the way Indian audience consume content</p>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
     </div>
     <br>
     <div class="container">
