--- a/index.html
+++ b/index.html
@@ -7,14 +7,40 @@
     <!-- CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
-    <link href='http://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet' type
+    <link href='http://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet'>
 </head>
 <body>
+    
+    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light " style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">
+      <a class="navbar-brand" href="index.html" style="margin-left: 400px;font-size: 25px;">KUMAVISA&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home &nbsp;</a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link" href="descriptive.html">Descriptive Analysis&nbsp;</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="predictive.html">Predictive Analysis&nbsp;</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="sentiment.html">Sentiment Analysis&nbsp;</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="dashboard.html">Dashboard&nbsp;</a>
+            </li>
+        </ul>
+      </div>
+    </nav> -->
     <br/>
     <div id="mySidenav" class="sidenav">
         <a href="#" id="about">Sachi Trambadia : 321057</a>
-        <a href="#" id="blog">Mahek Mulla      : 321043</a>
-        <a href="#" id="projects">Viraj Patil : 321025</a>
+        <a href="#" id="blog">Mahek Mulla      : 321031</a>
+        <a href="#" id="projects">Viraj Patil : 321058</a>
         <a href="#" id="contact">Kundan Kabra : 321023</a>
       </div>
       
@@ -26,9 +52,37 @@
         <div class="sub-heading1">
                <span class="ott"> Data analytics </span>for establishing an <span class="ott">OTT</span> platform!
         </div>
-        <div class="sub-heading2">      
+        <div class="sub-heading2" style="letter-spacing: 1px;font-family: 'Times New Roman', Times, serif;">      
                OTT stands for 'Over The Top' and refers to any streaming service that delivers content over the internet.      
         </div>
+        <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" style="margin-left: 29%;font-weight: 400;font-size: 15px;letter-spacing: 1rem;"  data-toggle="modal" data-target="#exampleModalCenter">
+  Problem Statement
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true" style="font-family: cursive;">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 id="exampleModalLongTitle" style="font-family: cursive;font-size: 15px;">Problem Statement</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
+        <p>A newly launched OTT platform wishes to list certain movies to increase traffic on their platform.</p>
+        <p>To analyze the various aspects and trends of Indian movies, Their data analytics team has gathered database of Movies from 1950 to 2019 having various attributes and various underlying influencing factors.</p> 
+ 
+        <p>The platform also desires to produce audience-centric  series/movies on the current trends of actors , genres , plot and IMDB rating and redefine the way Indian audience consume content</p>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
     </div>
     <br>
     <div class="container">
