--- a/index.html
+++ b/index.html
@@ -75,7 +75,14 @@
         <p>To analyze the various aspects and trends of Indian movies, Their data analytics team has gathered database of Movies from 1950 to 2019 having various attributes and various underlying influencing factors.</p> 
  
         <p>The platform also desires to produce audience-centric  series/movies on the current trends of actors , genres , plot and IMDB rating and redefine the way Indian audience consume content</p>
-
+        <br>
+        <hr>
+        Objective:
+        <hr>
+        •	Detailed overview of the future growth opportunities in this &nbsp;&nbsp;&nbsp;&nbsp; entertainment segment.<br>
+        •	Analyze various listed attributes to find, nurture, and build your &nbsp;&nbsp;OTT audience.<br>
+        •	Twitter Sentiment Analysis<br>
+        •	Create dashboard to identify trends that can influence future &nbsp;&nbsp;decision-making like trending genres, actors etc.<br  >
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -83,6 +90,8 @@
     </div>
   </div>
 </div>
+<br>
+
     </div>
     <br>
     <div class="container">
